--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <div class="header">
             <a class="logo-text" href="https://yuamble.org/ru">Yuamble</a>
             <div class="menu-header">
-                <a class="h-menu">Use Yuamble</a>
-                <a class="h-menu">Learn</a>
-                <a href="/developers" class="h-menu">Developers</a>
+                <a href="use-yuamble" class="h-menu">Use Yuamble</a>
+                <a href="learn" class="h-menu">Learn</a>
+                <a href="developers" class="h-menu">Developers</a>
             </div>
             <div class="hat_text">
                 <a id="hat" class="h-menu languages-text" href="/languages">
@@ -74,7 +74,7 @@
         <br><br>
         <a class="h2-pre-title">Yuamble is the world's first blockchain of smart contracts without fees, with Internet access, yuamba (YMB) cryptocurrency and decentralized applications.</a>
         <br>
-        <button class="button">Explore Yuamble</button>
+        <button class="button"><a href="learn">Explore Yuamble</a></button>
     </div>
 
     <div class="block-get-started">
